--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pkg": "pkg --targets node9-linux-x64,node9-macos-x64 --out-path ./pkg .",
     "build-bin": "yarn run pkg && yarn run docker-build",
     "docker-build": "docker build -t shrugs/paperboy:latest .",
-    "docker-push": "docker push shrugs/paperboy:latest"
+    "docker-push": "docker push shrugs/paperboy:latest",
+    "deploy": "yarn run build && yarn run pkg && yarn run docker-build && yarn run docker-push"
   },
   "files": [
     "lib"
